tests/src/frontend/syntax/invalid/class_modifiers.sk
async class C {}

fun main(): String { "Fail" }
